add Dungeon Score HUD element prototype